style: Pretified code
